finish: landing page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
     ></script>
   </head>
   <body>
+    <!-- navbar with link to: -->
     <!-- Home, About, Services, Blog, Contact -->
     <nav class="navbar navbar-expand-lg fixed-top">
-      <a href="#" class="navbar-brand"><img src="images/clover.png"  width=45 alt=""></a>
+      <div class="logo">
+        <a href="#" class="navbar-brand"
+          ><img src="images/clover.png" width="45" alt="logo" />
+        </a>
+      </div>
       <button
         class="navbar-toggler"
         type="button"
@@ -41,24 +46,115 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-4 text-center">
-          <li class="nav-item">
+        <ul class="navbar-nav">
+          <li class="nav-item px-5">
             <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-5">
             <a class="nav-link" href="#">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-5">
             <a class="nav-link" href="#">Services</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-5">
             <a class="nav-link" href="#">Blog</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item px-5">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
+
+    <!-- landing page -->
+    <div class="landing-page">
+      <video autoplay muted loop id="myBanner">
+        <source
+          src="videos/banner/Центр-реабилитации-детей.mp4"
+          type="video/mp4"
+        />
+      </video>
+      <div class="content">
+        <div class="container">
+          <div class="banner-content">
+            <h1 style="color: white">
+              Kazakhstan's First Digital Rehabilitation Center For Children
+            </h1>
+            <p>We help children grow up stronger.</p>
+          </div>
+          <button class="btn btn-success btn-lg" type="button">
+            Consultation
+          </button>
+          <button class="btn btn-success btn-lg" type="button">Explore</button>
+        </div>
+      </div>
+    </div>
+    <!-- Mission and Values -->
+    <div class="container text-center fw-bold">
+      <div class="mission mt-5">
+        <h1>Partners and sponsors</h1>
+        <div class="chain-of-cards">
+          <div class="chain-of-cards-item">
+            <img src="images/partnersAndSponsors/altyn.png" alt="altyn" />
+          </div>
+          <div class="chain-of-cards-item">
+            <img src="images/partnersAndSponsors/ayla.jpg" alt="ayla" />
+          </div>
+          <div class="chain-of-cards-item">
+            <img
+              src="images/partnersAndSponsors/halyk_bank.jpg"
+              alt="halyk_bank"
+            />
+          </div>
+          <div class="chain-of-cards-item">
+            <img src="images/partnersAndSponsors/nur_otan.jpg" alt="nur_otan" />
+          </div>
+          <div class="chain-of-cards-item">
+            <img src="images/partnersAndSponsors/rosinka.png" alt="rosinka" />
+          </div>
+        </div>
+        <h1>Mission</h1>
+        <p class="mt-5">
+          We support children and youth in discovering their potential and
+          engaging in their communities, through excellence in innovative
+          clinical services, assistive technologies, education, and research. We
+          authentically engage with children, youth, families with a focus on
+          equity, diversity, inclusion and belonging.
+        </p>
+      </div>
+      <div class="values mt-5">
+        <h1>Values</h1>
+        <div class="infographic mt-5">
+          <div class="infographic-item">
+            <h3>COURAGE</h3>
+            <p>TO FACE LIFE WITH INTEGRITY</p>
+          </div>
+          <div class="infographic-item">
+            <h3>HONESTY</h3>
+            <p>HONESTY IF FACING A SITUATION IS TO BE BRAVE</p>
+          </div>
+          <div class="infographic-item">
+            <h3>RESPECT</h3>
+            <p>TO HONOUR ALL OF CREATION IS TO HAVE RESPECT</p>
+          </div>
+          <div class="infographic-item">
+            <h3>LOVE</h3>
+            <p>TO KNOW LOVE IS TO FIND PEACE</p>
+          </div>
+          <div class="infographic-item">
+            <h3>WISDOM</h3>
+            <p>TO CHERISH KNOWLEDGE IS TO SEEK WISDOM</p>
+          </div>
+          <div class="infographic-item">
+            <h3>HUMILITY</h3>
+            <p>TO KNOW YOURSELF AS SACRED PART OF CREATION</p>
+          </div>
+          <div class="infographic-item">
+            <h3>TRUTH</h3>
+            <p>TRUTH IS TO KNOW (AND LIVE) ALL THESE THINGS</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
