finish: Technology & Innovation

--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
         </div>
       </div>
     </div>
-    <!-- Mission and Values -->
-    <div class="container text-center fw-bold">
-      <div class="mission mt-5">
+
+    <!-- Partners -->
+    <div id="partners">
+      <div class="container text-center fw-bold mt-5">
         <h1>Partners and sponsors</h1>
         <div class="chain-of-cards">
           <div class="chain-of-cards-item">
@@ -113,8 +114,13 @@
             <img src="images/partnersAndSponsors/rosinka.png" alt="rosinka" />
           </div>
         </div>
+      </div>
+    </div>
+    <!-- Mission -->
+    <div id="mission">
+      <div class="container text-center fw-bold">
         <h1>Mission</h1>
-        <p class="mt-5">
+        <p>
           We support children and youth in discovering their potential and
           engaging in their communities, through excellence in innovative
           clinical services, assistive technologies, education, and research. We
@@ -122,7 +128,10 @@
           equity, diversity, inclusion and belonging.
         </p>
       </div>
-      <div class="values mt-5">
+    </div>
+    <!-- Values -->
+    <div class="mt-5" id="values">
+      <div class="container text-center fw-bold">
         <h1>Values</h1>
         <div class="infographic mt-5">
           <div class="infographic-item">
@@ -153,6 +162,162 @@
             <h3>TRUTH</h3>
             <p>TRUTH IS TO KNOW (AND LIVE) ALL THESE THINGS</p>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- Technology & Innovation -->
+    <div id="technologies">
+      <div class="container text-center fw-bold mt-5">
+        <h1>Technologies</h1>
+        <div
+          class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xs-6 g-4 mt-5"
+        >
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/strolll.png"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Strolll</h5>
+                <p class="card-text">
+                  is cutting-edge augmented reality (AR) therapy system designed
+                  to enhance rehabilitation outcomes through engaging,
+                  client-centred activities.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/syrebo.jpg"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Syrebo</h5>
+                <p class="card-text">
+                  is a high-tech solution for hand rehabilitation.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/dst.jpeg"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">DST Triple Sense Parallel Bars</h5>
+                <p class="card-text">
+                  Developed by DPE Medical Ltd, the DST Triple Sense Parallel
+                  Bars combine three devices into one, offering an adjustable
+                  staircase, inclined walking surface, and horizontal bar.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/brz.jpg"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Brain Recovery Zone</h5>
+                <p class="card-text">
+                  is an immersive virtual reality recovery platform, which
+                  offers a safe virtual space for people to practice the habits
+                  that aid recovery.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="eco-technologies">
+      <div class="container text-center fw-bold mt-5">
+        <h1 class="mt-5">Sustainability in Rehabilitation</h1>
+        <div
+          class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xs-6 g-4 mt-5"
+        >
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/lunaEmg.jpg"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Luna EMG</h5>
+                <p class="card-text">
+                  Robotic device for upper and lower limb neurological and
+                  orthopedics rehabilitation. Experience revolution in
+                  neurorehabilitation and orthopedic therapy in your own
+                  practice.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-success">
+              <img
+                src="images/technoligiesAndInovations/biomotum.jpg"
+                class="card-img-top"
+                alt="images"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Biomotum</h5>
+                <p class="card-text">
+                  The Biomotum SPARK is transforming mobility rehabilitation,
+                  helping those with walking impairments live without limits.
+                  Our on-demand robotic system is remarkably effective at
+                  assisting and restoring walking function when compared to
+                  conventional approaches.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Programs for kids -->
+    <div id="programsForKids">
+      <div class="container text-center fw-bold mt-5">
+        <h1>Programs</h1>
+        <div class="programs mt-5">
+          <ul class="program">
+            <li>
+              <h3>Individual sessions with a physical therapy instructor</h3>
+            </li>
+            <li><h3>Mechanotherapy on rehabilitation equipment</h3></li>
+            <li><h3>Classes with a speech therapist</h3></li>
+            <li><h3>Classes with an occupational therapist</h3></li>
+            <li><h3>Therapeutic massage</h3></li>
+            <li><h3>Acupuncture</h3></li>
+          </ul>
+          <ul class="program">
+            <li>
+              <h3>
+                Hydrokinesotherapy (swimming pool exercises in the absence of
+                contraindications)
+              </h3>
+            </li>
+            <li><h3>Infusion conservative therapy</h3></li>
+            <li><h3>Ozone therapy intravenously</h3></li>
+            <li>
+              <h3>
+                Physiotherapy (magnetotherapy, myostimulation, electrophoresis,
+                translingual neurostimulation)
+              </h3>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
