--- a/index.html
+++ b/index.html
@@ -91,28 +91,26 @@
     </div>
 
     <!-- Partners -->
-    <div id="partners">
-      <div class="container text-center fw-bold mt-5">
-        <h1>Partners and sponsors</h1>
-        <div class="chain-of-cards">
-          <div class="chain-of-cards-item">
-            <img src="images/partnersAndSponsors/altyn.png" alt="altyn" />
-          </div>
-          <div class="chain-of-cards-item">
-            <img src="images/partnersAndSponsors/ayla.jpg" alt="ayla" />
-          </div>
-          <div class="chain-of-cards-item">
-            <img
-              src="images/partnersAndSponsors/halyk_bank.jpg"
-              alt="halyk_bank"
-            />
-          </div>
-          <div class="chain-of-cards-item">
-            <img src="images/partnersAndSponsors/nur_otan.jpg" alt="nur_otan" />
-          </div>
-          <div class="chain-of-cards-item">
-            <img src="images/partnersAndSponsors/rosinka.png" alt="rosinka" />
-          </div>
+    <div id="partners" class="text-center fw-bold my-5">
+      <h1>Partners and sponsors</h1>
+      <div class="chain-of-cards">
+        <div class="chain-of-cards-item">
+          <img src="images/partnersAndSponsors/altyn.png" alt="altyn" />
+        </div>
+        <div class="chain-of-cards-item">
+          <img src="images/partnersAndSponsors/ayla.jpg" alt="ayla" />
+        </div>
+        <div class="chain-of-cards-item">
+          <img
+            src="images/partnersAndSponsors/halyk_bank.jpg"
+            alt="halyk_bank"
+          />
+        </div>
+        <div class="chain-of-cards-item">
+          <img src="images/partnersAndSponsors/nur_otan.jpg" alt="nur_otan" />
+        </div>
+        <div class="chain-of-cards-item">
+          <img src="images/partnersAndSponsors/rosinka.png" alt="rosinka" />
         </div>
       </div>
     </div>
@@ -130,10 +128,10 @@
       </div>
     </div>
     <!-- Values -->
-    <div class="mt-5" id="values">
+    <div class="my-5" id="values">
       <div class="container text-center fw-bold">
         <h1>Values</h1>
-        <div class="infographic mt-5">
+        <div class="infographic my-5">
           <div class="infographic-item">
             <h3>COURAGE</h3>
             <p>TO FACE LIFE WITH INTEGRITY</p>
@@ -167,11 +165,9 @@
     </div>
     <!-- Technology & Innovation -->
     <div id="technologies">
-      <div class="container text-center fw-bold mt-5">
+      <div class="container text-center fw-bold my-5">
         <h1>Technologies</h1>
-        <div
-          class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xs-6 g-4 mt-5"
-        >
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4 my-5">
           <div class="col">
             <div class="card h-100 border-success">
               <img
@@ -184,7 +180,7 @@
                 <p class="card-text">
                   is cutting-edge augmented reality (AR) therapy system designed
                   to enhance rehabilitation outcomes through engaging,
-                  client-centred activities.
+                  patient-centred activities.
                 </p>
               </div>
             </div>
@@ -242,11 +238,9 @@
       </div>
     </div>
     <div id="eco-technologies">
-      <div class="container text-center fw-bold mt-5">
-        <h1 class="mt-5">Sustainability in Rehabilitation</h1>
-        <div
-          class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-cols-xs-6 g-4 mt-5"
-        >
+      <div class="container text-center fw-bold my-5">
+        <h1 class="my-5">Sustainability in Rehabilitation</h1>
+        <div class="row row-cols-1 row-cols-md-2 g-4 my-5">
           <div class="col">
             <div class="card h-100 border-success">
               <img
@@ -287,11 +281,180 @@
         </div>
       </div>
     </div>
+    <!-- testimonials -->
+    <div id="testimonials">
+      <div class="container text-center fw-bold my-5">
+        <h1>Patients</h1>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div
+              id="testimonialCarousel"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <!-- Patient -->
+                <div class="carousel-item active">
+                  <div class="testimonial-card position-relative">
+                    <div class="row align-items-center">
+                      <div class="col-md-4 text-center">
+                        <img
+                          src="images/patience/photo-1.jpg"
+                          class="avatar mb-3"
+                          alt="patient Avatar"
+                        />
+                        <h5 class="patient-name mb-1">name</h5>
+                        <p class="patient-disease">disease</p>
+                      </div>
+                      <div class="col-md-8">
+                        <p class="testimonial-text">"history/citation"</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Patient -->
+                <div class="carousel-item">
+                  <div class="testimonial-card position-relative">
+                    <div class="row align-items-center">
+                      <div class="col-md-4 text-center">
+                        <img
+                          src="images/patience/photo2.jpg"
+                          class="avatar mb-3"
+                          alt="patient Avatar"
+                        />
+                        <h5 class="patient-name mb-1">name</h5>
+                        <p class="patient-disease">disease</p>
+                      </div>
+                      <div class="col-md-8">
+                        <p class="testimonial-text">"history/citation"</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Patient -->
+                <div class="carousel-item">
+                  <div class="testimonial-card position-relative">
+                    <div class="row align-items-center">
+                      <div class="col-md-4 text-center">
+                        <img
+                          src="images/patience/photo3.jpg"
+                          class="avatar mb-3"
+                          alt="patient Avatar"
+                        />
+                        <h5 class="patient-name mb-1">name</h5>
+                        <p class="patient-disease">disease</p>
+                      </div>
+                      <div class="col-md-8">
+                        <p class="testimonial-text">"history/citation"</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Patient -->
+                <div class="carousel-item">
+                  <div class="testimonial-card position-relative">
+                    <div class="row align-items-center">
+                      <div class="col-md-4 text-center">
+                        <img
+                          src="images/patience/photo4.jpg"
+                          class="avatar mb-3"
+                          alt="patient Avatar"
+                        />
+                        <h5 class="patient-name mb-1">name</h5>
+                        <p class="patient-disease">disease</p>
+                      </div>
+                      <div class="col-md-8">
+                        <p class="testimonial-text">"history/citation"</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Patient -->
+                <div class="carousel-item">
+                  <div class="testimonial-card position-relative">
+                    <div class="row align-items-center">
+                      <div class="col-md-4 text-center">
+                        <img
+                          src="images/patience/photo5.jpg"
+                          class="avatar mb-3"
+                          alt="patient Avatar"
+                        />
+                        <h5 class="patient-name mb-1">name</h5>
+                        <p class="patient-disease">disease</p>
+                      </div>
+                      <div class="col-md-8">
+                        <p class="testimonial-text">"history/citation"</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Carousel Controls -->
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#testimonialCarousel"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#testimonialCarousel"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+
+              <!-- Carousel Indicators -->
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#testimonialCarousel"
+                  data-bs-slide-to="0"
+                  class="active"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#testimonialCarousel"
+                  data-bs-slide-to="1"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#testimonialCarousel"
+                  data-bs-slide-to="2"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#testimonialCarousel"
+                  data-bs-slide-to="3"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#testimonialCarousel"
+                  data-bs-slide-to="4"
+                ></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Programs for kids -->
     <div id="programsForKids">
-      <div class="container text-center fw-bold mt-5">
-        <h1>Programs</h1>
-        <div class="programs mt-5">
+      <div class="container text-center fw-bold my-5">
+        <h1>Personalized Recovery Plans</h1>
+        <div class="programs my-5">
           <ul class="program">
             <li>
               <h3>Individual sessions with a physical therapy instructor</h3>
