--- a/index.html
+++ b/index.html
@@ -90,6 +90,205 @@
       </div>
     </div>
 
+    <!-- About Us -->
+    <div id="AboutUs" class="text-center">
+      <h1>About Us</h1>
+      <div class="about-us-grid">
+        <div class="container text-center fw-bold">
+          <p>
+            Welcome to Kazakhstan's First Digital Rehabilitation Center for
+            Children — a pioneering hub dedicated to empowering children and
+            youth to realize their full potential. At our core, we believe every
+            child deserves the opportunity to thrive and actively participate in
+            their community. Through innovative clinical services, cutting-edge
+            assistive technologies, comprehensive education, and groundbreaking
+            research, we provide personalized support to children and their
+            families. Our center is built on a foundation of equity, diversity,
+            inclusion, and belonging. We are committed to authentically engaging
+            with children, youth, and families from all walks of life, ensuring
+            that everyone feels valued, heard, and supported on their journey.
+            By leveraging the latest advancements in digital rehabilitation, we
+            aim to break barriers, create opportunities, and help children and
+            youth lead fulfilling, connected lives. Together, we are redefining
+            what’s possible for the next generation. Join us as we build a
+            future where every child can thrive, grow, and shine.
+          </p>
+        </div>
+        <div class="container">
+          <div class="container">
+            <div
+              id="galleryCarousel"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="images/About us/gallery1.jpg"
+                    class="d-block w-100"
+                    alt="Gallery"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/About us/gallery2.jpg"
+                    class="d-block w-100"
+                    alt="Gallery"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/About us/gallery3.jpg"
+                    class="d-block w-100"
+                    alt="Gallery"
+                  />
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#galleryCarousel"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#galleryCarousel"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container text-center fw-bold">
+      <h1>History</h1>
+      <div id="timeline">
+        <div class="timeline-container left">
+          <div class="timeline-content">
+            <h2>2016</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
+              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
+              iusto primis ea eam.
+            </p>
+          </div>
+        </div>
+        <div class="timeline-container right">
+          <div class="timeline-content">
+            <h2>2017</h2>
+            <p>
+              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
+              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
+              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
+              iusto primis ea eam.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Services -->
+    <div id="services">
+      <div class="text-center fw-bold mt-5">
+        <h1>Services</h1>
+        <!-- Card 1 -->
+        <div class="chain-of-cards mt-5">
+          <div class="chain-of-cards-item">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img
+                    src="images/Services/Orthopedics.jpg"
+                    alt="Orthopedics"
+                  />
+                  <h3>Post-Operative Rehab</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p>
+                    Specialized programs in orthopedics, neurology, and
+                    cardiology for a smooth recovery.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="chain-of-cards-item">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img
+                    src="images/Services/SportsInjury.jpg"
+                    alt="Sports Injury"
+                  />
+                  <h3>Sports Injury Recovery</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p>
+                    Customized recovery plans for athletes, focusing on specific
+                    sports like hockey and tennis.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Card 3 -->
+          <div class="chain-of-cards-item">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img
+                    src="images/Services/ChronicIllness.jpg"
+                    alt="Chronic Illness"
+                  />
+                  <h3>Chronic Illness Management</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p>
+                    Comprehensive care programs designed for chronic conditions.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="chain-of-cards-item">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img
+                    src="images/Services/PreventiveWellness.jpg"
+                    alt="Preventive Wellness"
+                  />
+                  <h3>Preventive Health & Wellness</h3>
+                </div>
+                <div class="flip-card-back">
+                  <p>
+                    Health programs for office workers and seniors to promote
+                    wellness.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Partners -->
     <div id="partners" class="text-center fw-bold my-5">
       <h1>Partners and sponsors</h1>
@@ -647,6 +846,12 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <!-- Programs for kids -->
+    <div id="news">
+      <div class="container text-center fw-bold my-5">
+        <h1>News</h1>
       </div>
     </div>
   </body>
