--- a/pages/blog.html
+++ b/pages/blog.html
@@ -37,8 +37,8 @@
     <!-- Home, About, Services, Blog, Contact -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
-        <a href="home.html" class="navbar-brand"
-          ><img src="../images/clover.png" width="45" alt="logo" />
+        <a href="home.html"
+          ><img src="../images/logo.png" width="100" alt="logo" />
         </a>
       </div>
       <button
@@ -74,7 +74,7 @@
       </div>
     </nav>
     <!-- Programs for kids -->
-    <div id="news" style="margin-top: 4rem">
+    <div id="news" style="margin-top: 5rem">
       <div class="container text-center fw-bold">
         <h1>News</h1>
       </div>
