--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -37,8 +37,8 @@
     <!-- Home, About, Services, Blog, Contact -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
-        <a href="home.html" class="navbar-brand"
-          ><img src="../images/clover.png" width="45" alt="logo" />
+        <a href="home.html"
+          ><img src="../images/logo.png" width="100" alt="logo" />
         </a>
       </div>
       <button
@@ -73,12 +73,49 @@
         </ul>
       </div>
     </nav>
-    <div class="faq">
-      <h1>FAQ</h1>
+    <div class="container" style="margin-top: 7rem">
+      <h1 class="text-center fw-bold">FAQ</h1>
 
       <div class="faq">
-        <button class="accordion">
-          question <i class="fa-solid fa-chevron-down"></i>
+        <!-- question 1 -->
+        <button class="accordion fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> question
+        </button>
+        <div class="panel">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+            placeat facere in sapiente voluptatem, ut dignissimos accusantium
+            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
+            veritatis minus mollitia reprehenderit in.
+          </p>
+        </div>
+        <!-- question 2 -->
+        <button class="accordion fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> question
+        </button>
+        <div class="panel">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+            placeat facere in sapiente voluptatem, ut dignissimos accusantium
+            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
+            veritatis minus mollitia reprehenderit in.
+          </p>
+        </div>
+        <!-- question 3 -->
+        <button class="accordion fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> question
+        </button>
+        <div class="panel">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
+            placeat facere in sapiente voluptatem, ut dignissimos accusantium
+            aperiam animi adipisci corrupti? Unde, corporis excepturi alias
+            veritatis minus mollitia reprehenderit in.
+          </p>
+        </div>
+        <!-- question 4 -->
+        <button class="accordion fw-bold">
+          <i class="fa-solid fa-chevron-down"></i> question
         </button>
         <div class="panel">
           <p>
@@ -114,5 +151,23 @@
         </div>
       </div>
     </div>
+    <script>
+      var acc = document.getElementsByClassName("accordion");
+      var i;
+
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          this.parentElement.classList.toggle("active");
+
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
+      }
+    </script>
   </body>
 </html>
