--- a/pages/services.html
+++ b/pages/services.html
@@ -37,8 +37,8 @@
     <!-- Home, About, Services, Blog, Contact -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="logo">
-        <a href="home.html" class="navbar-brand"
-          ><img src="../images/clover.png" width="45" alt="logo" />
+        <a href="home.html"
+          ><img src="../images/logo.png" width="100" alt="logo" />
         </a>
       </div>
       <button
